--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@ Bg end  -->
 <div class="center-container">
     <div class="left-section">
       <div class="wu1">
+        
         <div class="wu2">
           <div class="wu3"></div>
           <div class="wu4">
@@ -477,6 +478,49 @@ Bg end  -->
   </div>
 </section>
 <!-- why us end-->
+<section class="whyus1">
+ <div id="rightwhyus">
+  <div id="one">
+    <div id="one1"></div>
+    <h5>Expertise and Experience</h5>
+    <p>Years of experience planning trips <br>worldwide</p>
+    
+  </div>
+ <div id="two">
+  <div id="one2"></div>
+  <h5>Best Price Guarantee</h5>
+   <p>Get the best prices on your vacation.</p>
+   </div>
+
+ <div id="three">
+  <div id="one1"></div>
+  <h5>Flexible Booking Options</h5>
+  <p>Change or cancel bookings with no penalty.</p>
+  </div>
+ </div>
+<div id="imagewhyus"><img class="wu9" alt="benefits" src="img/images.png"></div>
+<div id="leftwhyus">
+
+  <div id="four"> 
+    <div id="one3"></div>
+    <h5>24/7 Customer Support</h5>
+    <p>Assistance available at any time. We are always here.</p>
+    </div>
+  <div id="five">
+    <div id="one3"></div>
+    <h5>Safety and Security</h5>
+    <p>Prioritize your safety and security. Your trustworthy travel partner.</p>
+    </div>
+  <div id="six">
+    <div id="one3"></div>
+    <h5>Dedicated Specialists</h5>  
+    <p>Specialists for different destinations and travel types.</p>
+  </div>
+
+</div>
+ 
+
+</section>
 
 <!-- trip of the month -->
 <section class="trip-of-the-month">
